set default frame padding to 4. This is consistent with notebooks and avoids overlaps with inner widgets.

--- a/rc/gtk.css
+++ b/rc/gtk.css
@@ -125,7 +125,7 @@ GtkScrolledWindow {
     padding: 1px;
 }
 
-GtkFrame { padding: 1px; }
+GtkFrame { padding: 4px; }
 GtkViewport { padding: 0px; }
 GtkProgressBar { padding: 0px; }
 
